Finished experience section

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -21,5 +21,7 @@
   
   "experience.title": "Experience",
   "experience.present": "Present",
-  "experience.technologies": "Technologies"
+  "experience.technologies": "Technologies",
+
+  "projects.title": "Projects"
 }
