--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -21,5 +21,7 @@
   
   "experience.title": "Experiencia",
   "experience.present" : "Presente",
-  "experience.technologies": "Tecnologías"
+  "experience.technologies": "Tecnologías",
+
+  "projects.title": "Proyectos"
 }
