--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -23,5 +23,6 @@
   "experience.present": "Present",
   "experience.technologies": "Technologies",
 
-  "projects.title": "Projects"
+  "projects.title": "Projects",
+  "projects.present": "In development"
 }
