--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -23,5 +23,6 @@
   "experience.present" : "Presente",
   "experience.technologies": "Tecnologías",
 
-  "projects.title": "Proyectos"
+  "projects.title": "Proyectos",
+  "projects.present" : "En desarrollo"
 }
