--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -24,5 +24,7 @@
   "experience.technologies": "Technologies",
 
   "projects.title": "Projects",
-  "projects.present": "In development"
+  "projects.present": "In development",
+
+  "education.title": "Education"
 }
