Contact form started

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -26,5 +26,18 @@
   "projects.title": "Projects",
   "projects.present": "In development",
 
-  "education.title": "Education"
+  "education.title": "Education",
+
+  "contact.title": "Contact",
+  "contact.nameRequired": "Name is required",
+  "contact.invalidEmail": "Invalid email address",
+  "contact.subjectRequired": "Subject is required",
+  "contact.messageRequired": "Message is required",
+  "contact.success": "Message sent successfully",
+  "contact.form.name": "Name",
+  "contact.form.email": "Email",
+  "contact.form.phone": "Phone",
+  "contact.form.subject": "Subject",
+  "contact.form.message": "Message",
+  "contact.form.submit": "Send"
 }
