--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -29,6 +29,7 @@
   "education.title": "Educación",
   
   "contact.title": "Contacto",
+  "contact.subtitle": "¿Tienes alguna pregunta o quieres colaborar? ¡Envíame un mensaje!",
   "contact.nameRequired": "El nombre es obligatorio",
   "contact.invalidEmail": "Correo electrónico no válido",
   "contact.subjectRequired": "El asunto es obligatorio",
@@ -40,5 +41,6 @@
   "contact.form.phone": "Teléfono",
   "contact.form.subject": "Asunto",
   "contact.form.message": "Mensaje",
-  "contact.form.submit": "Enviar"
+  "contact.form.submit": "Enviar",
+  "contact.form.submitting": "Enviando..."
 }
