--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -29,7 +29,7 @@
   "education.title": "Education",
 
   "contact.title": "Contact",
-  "contact.subtitle": "Do you have any questions or want to collaborate? Send me a message!",
+  "contact.subtitle": "Do you have any questions or want to collaborate? Send me a message through this form! or send me an email to: ",
   "contact.nameRequired": "Name is required",
   "contact.invalidEmail": "Invalid email address",
   "contact.subjectRequired": "Subject is required",
