--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -44,5 +44,7 @@
   "contact.form.submitting": "Sending...",
   "contact.form.unexpectedError": "Unexpected error, please try again later.",
   "contact.form.invalidFormat": "Invalid format, please check the fields.",
-  "contact.form.successMessage": "Your message has been sent successfully!"
+  "contact.form.successMessage": "Your message has been sent successfully!",
+  "contact.form.captchaRequired": "Please complete the captcha before submitting the form.",
+  "contact.form.captchaError": "Captcha verification failed, please try again."
 }
