--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,9 +1,9 @@
 {
   "main.layout.title": "Alberto Galeano",
-  "main.layout.description": "Backend developer specialized in Java and Spring Boot, with experience across complementary areas including frontend development, database management, and DevOps practices.",
+  "main.layout.description": "I'm a software engineer specializing in Java Spring Boot backend systems that deliver measurable business impact. I build scalable APIs and architectures that solve complex problems—reducing processing times by 70%, accelerating development by 5x, and cutting costs by 40%. Clean architecture, comprehensive testing, and pragmatic solutions aren't just principles, they're how I work. Currently seeking opportunities to tackle challenging problems and grow alongside talented engineering teams.",
   "hero.title": "Alberto Galeano",
   "hero.subtitle": "Software Engineer",
-  "hero.description": "Backend developer specialized in Java and Spring Boot, with experience across complementary areas including frontend development, database management, and DevOps practices.",
+  "hero.description": "I'm a software engineer specializing in Java Spring Boot backend systems that deliver measurable business impact. I build scalable APIs and architectures that solve complex problems—reducing processing times by 70%, accelerating development by 5x, and cutting costs by 40%. Clean architecture, comprehensive testing, and pragmatic solutions aren't just principles, they're how I work. Currently seeking opportunities to tackle challenging problems and grow alongside talented engineering teams.",
   "hero.img.alt": "Photo of Alberto Galeano",
   
   "theme.light": "Light",
