--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -1,9 +1,9 @@
 {
   "main.layout.title": "Alberto Galeano",
-  "main.layout.description": "Desarrollador backend especializado en Java y Spring Boot, con experiencia en áreas complementarias como desarrollo frontend, gestión de bases de datos y prácticas DevOps.",
+  "main.layout.description": "Soy ingeniero de software especializado en sistemas backend con Java Spring Boot que generan impacto empresarial medible. Desarrollo APIs escalables y arquitecturas que resuelven problemas complejos—reduciendo tiempos de procesamiento en un 70%, acelerando desarrollo en 5x y reduciendo costes en un 40%. La arquitectura limpia, el testing exhaustivo y las soluciones pragmáticas no son solo principios, es como trabajo. Actualmente busco oportunidades para enfrentar problemas desafiantes y crecer junto a equipos de ingeniería talentosos.",
   "hero.title": "Alberto Galeano",
   "hero.subtitle": "Ingeniero de Software",
-  "hero.description": "Especializado en el desarrollo backend con Java y Spring Boot, con experiencia en otras áreas complementarias como frontend, bases de datos y DevOps.",
+  "hero.description": "Soy ingeniero de software especializado en sistemas backend con Java Spring Boot que generan impacto empresarial medible. Desarrollo APIs escalables y arquitecturas que resuelven problemas complejos—reduciendo tiempos de procesamiento en un 70%, acelerando desarrollo en 5x y reduciendo costes en un 40%. La arquitectura limpia, el testing exhaustivo y las soluciones pragmáticas no son solo principios, es como trabajo. Actualmente busco oportunidades para enfrentar problemas desafiantes y crecer junto a equipos de ingeniería talentosos.",
   "hero.img.alt": "Foto de Alberto Galeano",
   
   "theme.light": "Claro",
